fix alignment

--- a/src/scss/_book.scss
+++ b/src/scss/_book.scss
@@ -208,6 +208,6 @@
   align-self: center;
   width: 83%;
   height: 0.125rem;
-  margin: 2.5rem 0.063rem 1.813rem 0;
+  margin: 1.5rem 0.063rem 1.813rem 0;
   border: solid 1px #e8e8e8;
 }
